# CobotManipulation

./: .env.example  .gitignore  README.md  config.yaml  evaluate.py  pyproject.toml  run.py  test_commands.py  test_positions.py  test_render.py  test_spawn.py  test_visual.py  train.py
cobot/: orchestrator.py
cobot/env/: __init__.py  cobot_env.py  dual_arm_env.py  multi_object_env.py
cobot/evaluation/: benchmark.py
cobot/perception/: __init__.py  perception_module.py
cobot/planner/: __init__.py  task_planner.py
cobot/skills/: __init__.py  base.py  clear.py  grasp.py  handover.py  place_at.py  place_on.py  policy.py  push.py  rotate.py  skill_library.py  sort.py  spawn.py
cobot/voice/: __init__.py  voice_interface.py
docs/superpowers/specs/: 2026-06-08-cobot-manipulation-design.md
scripts/: run_benchmark.py
tests/: test_planner.py  test_smoke.py
