[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cobot-manipulation"
version = "0.1.0"
description = "Language-conditioned tabletop robotic manipulation via LLM planning, learned primitives, and VLM perception"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "robosuite>=1.4.0",
    "mujoco>=3.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.29.0",
    "openai>=1.0.0",
    "openai-whisper>=20231117",
    "webrtcvad>=2.0.10",
    "sounddevice>=0.4.6",
    "scipy>=1.10.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.13.0",
]

[project.optional-dependencies]
local-vlm = [
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cobot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
